@@ -1,3 +1,5 @@
+* Rename statement state from cancel to cancelled
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Prevent posting move from statement that is not posted
